# scribe

./: .env.example  .gitignore  CLAUDE.md  INVENTORY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01-introduction.md  02-problem.md  03-objectives.md  04-state-of-the-art.md  05-requirements.md  06-use-cases.md  07-data-model.md  08-class-diagrams.md  09-mockups.md  10-api-catalog.md  11-testing.md  12-architecture.md  13-results.md  14-future-work.md  15-presentation-cheatsheet.md
landing/: README.md  index.html  styles.css
presentation/html/: README.md  index.html  styles.css
scripts/: cleanup.sh  dev.sh  setup.sh
src/scribe/: __init__.py  analyzer.py  cli.py  generator.py  llm.py  prompts.py  templates.py  ui.py
tests/: conftest.py
tests/integration/: test_generator.py
tests/unit/: test_analyzer.py  test_prompts.py  test_templates.py
